[package]
name = "bogen"
version = "0.1.0"
authors = ["ocornoc <ocornoc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
serde = {version = "1.0.119", features = ["derive"]}
rand = {version = "0.8.1", features = ["small_rng"]}
rand_distr = "0.4.0"
ron = "0.6.4"
# genevo = "0.5.0"

[profile.release]
lto = "thin"
incremental = true
